[gd_scene load_steps=18 format=2]

[ext_resource path="res://global/themes/main_theme.tres" type="Theme" id=1]
[ext_resource path="res://global/icons/icons8-search-80.png" type="Texture" id=2]
[ext_resource path="res://global/fonts/nunito/static/Nunito-Medium.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://scenes/main/edit_create_back.gd" type="Script" id=4]
[ext_resource path="res://scenes/main/main.gd" type="Script" id=5]
[ext_resource path="res://addons/calendar_button/scripts/calendar_script.gd" type="Script" id=6]
[ext_resource path="res://global/icons/icons8-delete-button-60.png" type="Texture" id=7]
[ext_resource path="res://addons/calendar_button/btn_img/btn_64x64_04.png" type="Texture" id=8]

[sub_resource type="StyleBoxEmpty" id=1]

[sub_resource type="StyleBoxFlat" id=2]
content_margin_left = 20.0
content_margin_right = 120.0
bg_color = Color( 0, 0, 0, 0.180392 )
corner_radius_top_left = 50
corner_radius_top_right = 50
corner_radius_bottom_right = 50
corner_radius_bottom_left = 50

[sub_resource type="DynamicFont" id=10]
size = 65
use_filter = true
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxFlat" id=12]
bg_color = Color( 0.13056, 0.1216, 0.16, 0.764706 )

[sub_resource type="Shader" id=13]
code = "shader_type canvas_item;

render_mode blend_mix;

uniform int step_size = 2;
uniform float light_multiplier = 1.0;
uniform float length_multiplier = 1.0;

void fragment() {
	vec2 uv = SCREEN_UV;
	vec3 col = texture(SCREEN_TEXTURE, uv).xyz * 0.16;
	
	int count;
	for(count = 0; count <= step_size; count++) {
		col += texture(SCREEN_TEXTURE, uv + vec2(0.0, float(count) * length_multiplier * SCREEN_PIXEL_SIZE.y)).xyz * 0.15;
		col += texture(SCREEN_TEXTURE, uv + vec2(0.0, float(count) * length_multiplier * -SCREEN_PIXEL_SIZE.y)).xyz * 0.15;
	}
	col = col / float(count + 1) * light_multiplier;
	COLOR.xyz = col;
}"

[sub_resource type="ShaderMaterial" id=14]
shader = SubResource( 13 )
shader_param/step_size = 8
shader_param/light_multiplier = 3.25
shader_param/length_multiplier = 0.8

[sub_resource type="StyleBoxFlat" id=11]
bg_color = Color( 0.223529, 0.207843, 0.27451, 1 )
corner_radius_top_left = 50
corner_radius_top_right = 50
corner_radius_bottom_right = 50
corner_radius_bottom_left = 50

[sub_resource type="StyleBoxEmpty" id=8]
content_margin_left = 20.0

[sub_resource type="DynamicFont" id=19]
size = 32
use_filter = true
font_data = ExtResource( 3 )

[node name="Main" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 5 )

[node name="PanelBack" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_top = 20.0
margin_right = -20.0
margin_bottom = -20.0

[node name="SearchLine" type="LineEdit" parent="PanelBack"]
anchor_right = 1.0
margin_bottom = 115.0
custom_styles/focus = SubResource( 1 )
custom_styles/normal = SubResource( 2 )
placeholder_text = "Search ToDo"

[node name="SearchButton" type="Button" parent="PanelBack/SearchLine"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -113.0
margin_top = -57.5
margin_bottom = 57.5
shortcut_in_tooltip = false
icon = ExtResource( 2 )
clip_text = true
icon_align = 1

[node name="ScrollContainer" type="ScrollContainer" parent="PanelBack"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 134.0
margin_bottom = -115.0
scroll_horizontal_enabled = false

[node name="ToDoContainer" type="VBoxContainer" parent="PanelBack/ScrollContainer"]
margin_right = 680.0
margin_bottom = 991.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 16

[node name="BottomControl" type="Control" parent="PanelBack"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -104.0
margin_bottom = -10.0

[node name="AddNewToDo" type="Button" parent="PanelBack/BottomControl"]
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -45.0
margin_right = 45.0
custom_fonts/font = SubResource( 10 )

[node name="Label" type="Label" parent="PanelBack/BottomControl/AddNewToDo"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = -3.0
custom_fonts/font = SubResource( 10 )
text = "+"
align = 1
valign = 1

[node name="EditCreateBack" type="Panel" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_top = 20.0
margin_right = -20.0
margin_bottom = -20.0
custom_styles/panel = SubResource( 12 )
script = ExtResource( 4 )

[node name="ColorRect" type="ColorRect" parent="EditCreateBack"]
material = SubResource( 14 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -20.0
margin_top = -20.0
margin_right = 20.0
margin_bottom = 20.0

[node name="EditCreateMode" type="Panel" parent="EditCreateBack"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 237.0
margin_bottom = -513.0
custom_styles/panel = SubResource( 11 )

[node name="ExitFromCalendar" type="Button" parent="EditCreateBack/EditCreateMode"]
anchor_left = -0.029
anchor_top = -0.524
anchor_right = 1.029
anchor_bottom = 2.088
margin_right = 6.10352e-05
margin_bottom = 6.10352e-05
mouse_filter = 1
custom_styles/hover = SubResource( 8 )
custom_styles/pressed = SubResource( 8 )
custom_styles/normal = SubResource( 8 )

[node name="Exit" type="Button" parent="EditCreateBack/EditCreateMode"]
margin_right = 105.0
margin_bottom = 115.0
custom_styles/hover = SubResource( 8 )
custom_styles/pressed = SubResource( 8 )
custom_styles/normal = SubResource( 8 )
text = "x"

[node name="Delete" type="Button" parent="EditCreateBack/EditCreateMode"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -103.0
margin_bottom = 113.0
custom_styles/hover = SubResource( 8 )
custom_styles/pressed = SubResource( 8 )
custom_styles/normal = SubResource( 8 )

[node name="TextureRect" type="TextureRect" parent="EditCreateBack/EditCreateMode/Delete"]
anchor_left = 0.383
anchor_top = 0.553
anchor_right = 0.383
anchor_bottom = 0.553
margin_left = -20.949
margin_top = -23.489
margin_right = 21.051
margin_bottom = 23.511
mouse_filter = 2
texture = ExtResource( 7 )
expand = true
stretch_mode = 6

[node name="NameMode" type="Label" parent="EditCreateBack/EditCreateMode"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -218.5
margin_right = 218.5
margin_bottom = 125.0
text = "Create new ToDo"
align = 1
valign = 1

[node name="TextEdit" type="TextEdit" parent="EditCreateBack/EditCreateMode"]
anchor_right = 1.0
anchor_bottom = 0.571
margin_left = 45.0
margin_top = 114.0
margin_right = -45.0
margin_bottom = 0.209991
custom_constants/line_spacing = -10
custom_fonts/font = SubResource( 19 )
text = "example"
smooth_scrolling = true
wrap_enabled = true

[node name="TimeText" type="Label" parent="EditCreateBack/EditCreateMode"]
anchor_top = 0.796
anchor_right = 1.0
anchor_bottom = 0.796
margin_left = 153.0
margin_top = -86.04
margin_right = -53.0
margin_bottom = -17.04
text = "example"
align = 2
clip_text = true

[node name="CalendarButton" type="TextureButton" parent="EditCreateBack/EditCreateMode"]
anchor_top = 0.793
anchor_bottom = 0.793
margin_left = 55.0
margin_top = -87.57
margin_right = 124.0
margin_bottom = -17.57
toggle_mode = true
shortcut_in_tooltip = false
expand = true
script = ExtResource( 6 )

[node name="TextureRect" type="TextureRect" parent="EditCreateBack/EditCreateMode/CalendarButton"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 8 )
expand = true
stretch_mode = 4

[node name="Save" type="Button" parent="EditCreateBack/EditCreateMode"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -100.0
text = "Save"

[connection signal="text_changed" from="PanelBack/SearchLine" to="." method="_on_searchline_text_changed"]
[connection signal="pressed" from="PanelBack/SearchLine/SearchButton" to="." method="_on_SearchButton_pressed"]
[connection signal="pressed" from="PanelBack/BottomControl/AddNewToDo" to="." method="_on_add_new_todo_pressed"]
[connection signal="pressed" from="EditCreateBack/EditCreateMode/ExitFromCalendar" to="EditCreateBack" method="_on_ExitFromCalendar_pressed"]
[connection signal="pressed" from="EditCreateBack/EditCreateMode/Exit" to="." method="_on_exit_pressed"]
[connection signal="pressed" from="EditCreateBack/EditCreateMode/Delete" to="EditCreateBack" method="_on_Delete_pressed"]
[connection signal="date_selected" from="EditCreateBack/EditCreateMode/CalendarButton" to="EditCreateBack" method="_on_CalendarButton_date_selected"]
[connection signal="pressed" from="EditCreateBack/EditCreateMode/Save" to="EditCreateBack" method="_on_save_pressed"]
